added a new approach for sharing common data between views

--- a/apps/ForumComposite/Views/Category/All.cshtml
+++ b/apps/ForumComposite/Views/Category/All.cshtml
@@ -1,7 +1,6 @@
-﻿@using ForumSkeletonMvc.ViewModels.Category
-@model AllCategoriesViewModel
+﻿@model ForumComposite.ViewModels.Category.AllCategoriesViewModel
 @{
-	ViewBag.Title = "{Forum Name} - Categories";
+	ViewBag.Title = ForumName + " - Categories";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
 }
@@ -16,34 +15,34 @@
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h2>
+					Name}</a></h2>
 		<p>A brief description of the category.</p>
-		@for (int i = 1; i < 5; i++)
-	{
+		@for (var i = 1; i < 5; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h2>
+					Name}</a></h2>
 		<p>A brief description of the category.</p>
-		@for (int i = 1; i < 5; i++)
-	{
+		@for (var i = 1; i < 5; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span5">
 		<h2><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h2>
+					Name}</a></h2>
 		<p>A brief description of the category.</p>
-		@for (int i = 1; i < 5; i++)
-	{
+		@for (var i = 1; i < 5; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Medium", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
@@ -55,45 +54,45 @@
 
 	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h3>
+					Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (int i = 1; i < 3; i++)
-	{
+		@for (var i = 1; i < 3; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h3>
+					Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (int i = 1; i < 3; i++)
-	{
+		@for (var i = 1; i < 3; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h3>
+					Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (int i = 1; i < 3; i++)
-	{
+		@for (var i = 1; i < 3; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
 	<div class="span4" style="font-size: small;">
 		<h3><a href="@Url.RouteUrl("Category", new { categorySlug = "category-name" })">{Category
-			Name}</a></h3>
+					Name}</a></h3>
 		<p style="font-size: smaller;">A brief description of the category.</p>
-		@for (int i = 1; i < 3; i++)
-	{
+		@for (var i = 1; i < 3; i++)
+		{
 			@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Mode = "Condensed" })
-	}
+		}
 		<a href="#">View</a> 33 more posts.
 	</div>
 
@@ -114,4 +113,3 @@
 		<li class="next"><a href="#">Next &rarr;</a></li>
 	</ul>
 </div>
-
