--- a/apps/ForumComposite/Views/Category/Detail.cshtml
+++ b/apps/ForumComposite/Views/Category/Detail.cshtml
@@ -1,7 +1,6 @@
-﻿@using ForumSkeletonMvc.ViewModels.Category
-@model CategoryDetailsViewModel
+﻿@model ForumComposite.ViewModels.Category.CategoryDetailsViewModel
 @{
-	ViewBag.Title = "{Forum Name} - {Category Name}";
+	ViewBag.Title = ForumName + " - {Category Name}";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
 }
