--- a/apps/ForumComposite/Views/Pages/Info.cshtml
+++ b/apps/ForumComposite/Views/Pages/Info.cshtml
@@ -1,5 +1,4 @@
-﻿@using ForumSkeletonMvc.ViewModels.Pages
-@model InfoPageViewModel
+﻿@model ForumComposite.ViewModels.Pages.InfoPageViewModel
 @{
 	ViewBag.Title = "{Forum Name} Info";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
