--- a/apps/ForumComposite/Views/PostListing/All.cshtml
+++ b/apps/ForumComposite/Views/PostListing/All.cshtml
@@ -1,7 +1,6 @@
-﻿@using ForumSkeletonMvc.ViewModels.PostListing
-@model AllPostsViewModel
+﻿@model ForumComposite.ViewModels.PostListing.AllPostsViewModel
 @{
-	ViewBag.Title = "{Forum Name} - All Posts";
+	ViewBag.Title = ForumName + " - All Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="tabs">
