--- a/apps/ForumComposite/Views/PostListing/Popular.cshtml
+++ b/apps/ForumComposite/Views/PostListing/Popular.cshtml
@@ -1,7 +1,6 @@
-﻿@using ForumSkeletonMvc.ViewModels.PostListing
-@model PopularPostsViewModel
+﻿@model ForumComposite.ViewModels.PostListing.PopularPostsViewModel
 @{
-	ViewBag.Title = "{Forum Name} Home";
+	ViewBag.Title = ForumName + " Home";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 
