--- a/apps/ForumComposite/Views/Profile/Badges.cshtml
+++ b/apps/ForumComposite/Views/Profile/Badges.cshtml
@@ -1,14 +1,13 @@
-﻿@using ForumSkeletonMvc.ViewModels.Profile
-@model ProfileBadgesViewModel
+﻿@model ForumComposite.ViewModels.Profile.ProfileBadgesViewModel
 @{
-	ViewBag.Title = "{Forum Name} - {Username}'s Badges";
+	ViewBag.Title = ForumName + " - {Username}'s Badges";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.ProfileBadgesClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
-	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">{Username}</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a> <span class="divider">/</span></li>
 	<li class="active">Badges</li>
 </ul>
 <h1>{Username}'s Badges</h1>
@@ -20,23 +19,22 @@
 	<div class="span12">
 		<ul class="media-grid">
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 			<li class="thumbnail"><a href="#">
-				<img src="http://placehold.it/210x150" /></a></li>
+															<img src="http://placehold.it/210x150" /></a></li>
 		</ul>
 	</div>
 
 </div>
-
