--- a/apps/ForumComposite/Views/Tag/Detail.cshtml
+++ b/apps/ForumComposite/Views/Tag/Detail.cshtml
@@ -1,7 +1,6 @@
-﻿@using ForumSkeletonMvc.ViewModels.Tag
-@model TagDetailViewModel
+﻿@model ForumComposite.ViewModels.Tag.TagDetailViewModel
 @{
-	ViewBag.Title = "{Forum Name} - {Tag Name}";
+	ViewBag.Title = ForumName + " - {Tag Name}";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.TagsClass = "active";
 }
