--- a/apps/ForumComposite/Views/Post/Create.cshtml
+++ b/apps/ForumComposite/Views/Post/Create.cshtml
@@ -1,21 +1,20 @@
-﻿@using ForumSkeletonMvc.ViewModels.Post
-@model CreatePostViewModel
+﻿@model ForumComposite.ViewModels.Post.CreatePostViewModel
 <form>
-<fieldset>
-	<div class="clearfix">
-		<label for="username">
-			Title</label>
-		<div class="input">
-			<input class="large" name="username" size="30" type="text" value="Your Post Title" />
+	<fieldset>
+		<div class="clearfix">
+			<label for="username">
+				Title</label>
+			<div class="input">
+				<input class="large" name="username" size="30" type="text" value="Your Post Title" />
+			</div>
 		</div>
-	</div>
-	<div class="clearfix">
-		<label for="email">
-			Post</label>
-		<div class="input">
-			<textarea class="xlarge" id="newReplyBody" name="newReplyBody" rows="6"></textarea>
-			<span class="help-block">Please be civil.</span>
+		<div class="clearfix">
+			<label for="email">
+				Post</label>
+			<div class="input">
+				<textarea class="xlarge" id="newReplyBody" name="newReplyBody" rows="6"></textarea>
+				<span class="help-block">Please be civil.</span>
+			</div>
 		</div>
-	</div>
-</fieldset>
+	</fieldset>
 </form>
