--- a/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
+++ b/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
@@ -1,5 +1,4 @@
-﻿@using ForumSkeletonMvc.ViewModels.Profile
-@model ProfileRecentActivityViewModel
+﻿@model ForumComposite.ViewModels.Profile.ProfileRecentActivityViewModel
 @{
 	ViewBag.Title = "{Forum Name} - {Username}'s Recent Activity";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
@@ -8,7 +7,7 @@
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
-	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug"})">{Username}</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a> <span class="divider">/</span></li>
 	<li class="active">Recent Activity</li>
 </ul>
 <h1>{Username}'s Recent Activity</h1>
@@ -19,11 +18,10 @@
 	<div class="row">
 
 		<div class="span10">
-			<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">{Post Title}</a></h3>
+			<h3><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">{Post Title}</a></h3>
 			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-					font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-						Category</a></span></p>
+				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
+																																																																																				Category</a></span></p>
 
 			<div class="row">
 
@@ -43,29 +41,25 @@
 		</div>
 
 	</div>
-				
+
 	if (i % 2 == 0)
 	{
-				
-	<div class="row">
+		<div class="row">
 
-		<div class="span10">
-			<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title"})">
-				{Post Title}</a></strong>. </p>
-			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-					font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
+			<div class="span10">
+				<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">
+																															{Post Title}</a></strong>. </p>
+				<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
+					dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
+			</div>
+
 		</div>
+		<div class="row">
 
-	</div>
-	<div class="row">
+			<div class="span10 offset1">
+				<hr />
+			</div>
 
-		<div class="span10 offset1">
-			<hr />
 		</div>
-
-	</div>
-		 
 	}
-
 }
