connected categories and top users listings

--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -181,7 +181,7 @@
 						</td>
 						<td>@user.FirstName @user.LastName</td>
 						<td>@user.Username</td>
-						<td>@user.NumberPosts</td>
+						<td>@user.PostCount</td>
 						<td>
 							<ul class="actions">
 								<li>@user.NumberVotes</li>
