--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/Categories.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/Categories.cshtml
@@ -1,10 +1,8 @@
 ﻿<h3>Categories</h3>
 <ul>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "category" })">Category</a> (10)</li>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "another-category" })">Another Category</a> (10)</li>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "creative-category" })">Creative Category</a> (10)</li>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "unmoderated-forum" })">Unmoderated Forum</a> (10)</li>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "placeholder-category" })">Placeholder Category</a> (10)</li>
-	<li><a href="@Url.RouteUrl("Category", new { categorySlug = "example-category" })">Example Category</a> (10)</li>
+	@foreach(var category in Categories)
+	{
+		<li><a href="@Url.RouteUrl("Category", new { categorySlug = "category" })">@category.Name</a> (@category.TotalPosts)</li>
+	}
 </ul>
 <p><a href="@Url.RouteUrl("Categories")">View all categories</a>.</p>
