added forum name to breadcrumbs

--- a/apps/ForumComposite/Views/Category/All.cshtml
+++ b/apps/ForumComposite/Views/Category/All.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.CategoriesClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li class="active">Categories</li>
 </ul>
 <h1>Categories</h1>
