--- a/apps/ForumComposite/Views/Profile/All.cshtml
+++ b/apps/ForumComposite/Views/Profile/All.cshtml
@@ -4,7 +4,7 @@
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li class="active">All Users</li>
 </ul>
 <h1>All Users</h1>
