--- a/apps/ForumComposite/Views/Profile/Overview.cshtml
+++ b/apps/ForumComposite/Views/Profile/Overview.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.ProfileOverviewClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
 	<li class="active">{Username}</li>
 </ul>
