--- a/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
+++ b/apps/ForumComposite/Views/Profile/RecentActivity.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.ProfileRecentActivityClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("AllProfiles")">All Users</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a> <span class="divider">/</span></li>
 	<li class="active">Recent Activity</li>
