--- a/apps/ForumComposite/Views/Tag/Detail.cshtml
+++ b/apps/ForumComposite/Views/Tag/Detail.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.TagsClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("Tags")">Tags</a> <span class="divider">/</span></li>
 	<li class="active">{Tag Name}</li>
 </ul>
